<resources>
    <string name="app_name">Diplomski_rad_TV</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut etiam sit amet nisl purus. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pulvinar pellentesque habitant morbi tristique senectus et. A erat nam at lectus urna duis convallis convallis tellus. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sit amet porttitor eget dolor morbi non arcu risus. Suspendisse ultrices gravida dictum fusce. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. A diam maecenas sed enim ut sem viverra aliquet. Velit sed ullamcorper morbi tincidunt. Morbi quis commodo odio aenean sed. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Blandit aliquam etiam erat velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut etiam sit amet nisl purus. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pulvinar pellentesque habitant morbi tristique senectus et. A erat nam at lectus urna duis convallis convallis tellus. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sit amet porttitor eget dolor morbi non arcu risus. Suspendisse ultrices gravida dictum fusce. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. A diam maecenas sed enim ut sem viverra aliquet. Velit sed ullamcorper morbi tincidunt. Morbi quis commodo odio aenean sed. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Blandit aliquam etiam erat velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut etiam sit amet nisl purus. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Pulvinar pellentesque habitant morbi tristique senectus et. A erat nam at lectus urna duis convallis convallis tellus. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Sit amet porttitor eget dolor morbi non arcu risus. Suspendisse ultrices gravida dictum fusce. Odio tempor orci dapibus ultrices in iaculis nunc sed augue. A diam maecenas sed enim ut sem viverra aliquet. Velit sed ullamcorper morbi tincidunt. Morbi quis commodo odio aenean sed. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Blandit aliquam etiam erat velit.</string>
    <string name="date_display">24.07.2024.</string>
    <string name="temperature_display">-22°C</string>
    <string name="empty_string" />
    <string name="language_en">English</string>
    <string name="language_de">Deutsche</string>
    <string name="language_hr">Hrvatski</string>
    <string name="light_theme_en">Light</string>
    <string name="light_theme_de">Hell</string>
    <string name="light_theme_hr">Svijetlo</string>
    <string name="dark_theme_en">Dark</string>
    <string name="dark_theme_de">Dunkell</string>
    <string name="dark_theme_hr">Tamno</string>
    <string name="grid_en">Appearance</string>
    <string name="grid_de">Aussehen</string>
    <string name="grid_hr">Izgled</string>
    <string name="no_estates_en">There are no estates to display!</string>
    <string name="no_estates_de">Es sind keine Immobilien zum Anzeigen vorhanden!</string>
    <string name="no_estates_hr">Nema nekretnina za prikaz!</string>
    <string name="no_categories_en">There are no categories to display!</string>
    <string name="no_categories_de">Es sind keine Kategorien zum Anzeigen vorhanden!</string>
    <string name="no_categories_hr">Nema stavci za prikaz!</string>
    <string name="no_elements_en">There are no items to display!</string>
    <string name="no_elements_de">Es sind keine Elemente zum Anzeigen vorhanden!</string>
    <string name="no_elements_hr">Nema stavka za prikaz!</string>
    <string name="real_estate_name_en">Real estate name</string>
    <string name="real_estate_name_de">Immobilienname</string>
    <string name="real_estate_name_hr">Naziv nekretnine</string>
    <string name="category_name_en">Category name</string>
    <string name="category_name_de">Kategoriename</string>
    <string name="category_name_hr">Ime stavke</string>
    <string name="element_name_en">Item name</string>
    <string name="element_name_de">Elementname</string>
    <string name="element_name_hr">Naziv stavke</string>
    <string name="invalid_page_number_en">Invalid input. Please enter a number between 1 and</string>
    <string name="invalid_page_number_de">Ungültige Eingabe. Bitte geben Sie eine Zahl zwischen 1 und</string>
    <string name="invalid_page_number_hr">Pogrešan unos. Unesite broj između 1 i</string>
    <string name="email_empty_en">Email field cannot be empty.</string>
    <string name="email_empty_de">Das E-Mail-Feld darf nicht leer sein.</string>
    <string name="email_empty_hr">Polje e-maila ne može biti prazno.</string>
    <string name="password_empty_en">Password field cannot be empty.</string>
    <string name="password_empty_de">Das Passwortfeld darf nicht leer sein.</string>
    <string name="password_empty_hr">Polje za lozinku ne može biti prazno.</string>
    <string name="email_or_password_incorrect_en">Email or password is incorrect.</string>
    <string name="email_or_password_incorrect_de">Email oder Passwort ist falsch.</string>
    <string name="email_or_password_incorrect_hr">E-mail ili lozinka su netočni.</string>
    <string name="firebase_error_en">An error occured while attempting to retrieve your data from the server.</string>
    <string name="firebase_error_de">Beim Versuch, Ihre Daten vom Server abzurufen, ist ein Fehler aufgetreten.</string>
    <string name="firebase_error_hr">Došlo je do pogreške prilikom pokušaja dohvaćanja vaših podataka s poslužitelja.</string>
    <string name="email_en">Email</string>
    <string name="email_de">Email</string>
    <string name="email_hr">E-mail</string>
    <string name="password_en">Password</string>
    <string name="password_de">Passwort</string>
    <string name="password_hr">Lozinka</string>
    <string name="login_en">Sign in</string>
    <string name="login_de">Anmelden</string>
    <string name="login_hr">Prijavite se</string>
    <string name="welcome_en">Welcome</string>
    <string name="welcome_de">Willkommen</string>
    <string name="welcome_hr">Dobro došli</string>
    <string name="send_rating_en">Send review</string>
    <string name="send_rating_de">Rezension senden</string>
    <string name="send_rating_hr">Pošalji recenziju</string>
    <string name="rating_content_en">Please write down any praise and remarks</string>
    <string name="rating_content_de">Bitte schreiben Sie Lob und Bemerkungen auf</string>
    <string name="rating_content_hr">Zapišite sve pohvale i primjedbe</string>
    <string name="hint_skip_welcome_en">* Press the select button to skip the welcome screen</string>
    <string name="hint_skip_welcome_de">* Drücken Sie die Auswahltaste, um den Begrüßungsbildschirm zu überspringen</string>
    <string name="hint_skip_welcome_hr">* Pritisnite gumb za odabir kako biste preskočili ekran dobrodošlice</string>
    <string name="cancel_en">Cancel</string>
    <string name="cancel_de">Kündigen</string>
    <string name="cancel_hr">Otkaži</string>
    <string name="rating_en">Review</string>
    <string name="rating_de">Rezension</string>
    <string name="rating_hr">Recenzija</string>
    <string name="cannot_uploading_rating_en">There was an error while uploading your review.</string>
    <string name="cannot_uploading_rating_de">Beim Hochladen Ihrer Rezension ist ein Fehler aufgetreten.</string>
    <string name="cannot_uploading_rating_hr">Došlo je do pogreške prilikom slanja vaše recenzije.</string>
    <string name="cannot_download_rating_en">There was an error while downloading previous review.</string>
    <string name="cannot_download_rating_de">Beim Herunterladen der vorherigen Rezension ist ein Fehler aufgetreten.</string>
    <string name="cannot_download_rating_hr">Došlo je do pogreške prilikom preuzimanja prethodnih recenzija.</string>
    <string name="search_en">Search...</string>
    <string name="search_de">Suchen...</string>
    <string name="search_hr">Traži...</string>
    <string name="enter_password_en">Enter password</string>
    <string name="enter_password_de">Passwort eingeben</string>
    <string name="enter_password_hr">Upišite lozinku</string>
    <string name="submit_password_en">Submit password</string>
    <string name="submit_password_de">Passwort einreichen</string>
    <string name="submit_password_hr">Pošalji lozinku</string>
    <string name="blocked_status_en">You have been currently blocked from accessing your account.</string>
    <string name="blocked_status_de">Der Zugriff auf Ihr Konto ist derzeit gesperrt.</string>
    <string name="blocked_status_hr">Trenutno vam je blokiran pristup vašem računu.</string>
    <string name="banned_status_en">You account has been permanently banned.</string>
    <string name="banned_status_de">Ihr Konto wurde dauerhaft gesperrt.</string>
    <string name="banned_status_hr">Vaš račun je trajno zabranjen.</string>
    <string name="choose_rating_page_en">Choose next page</string>
    <string name="choose_rating_page_de">Nächste Seite auswählen</string>
    <string name="choose_rating_page_hr">Odaberite sljedeću stranicu</string>
    <string name="my_rating_en">My review</string>
    <string name="my_rating_de">Meine Rezension</string>
    <string name="my_rating_hr">Moja recenzija</string>
    <string name="show_ratings_en">Show reviews</string>
    <string name="show_ratings_de">Rezensione anzeigen</string>
    <string name="show_ratings_hr">Prikaži recenzije</string>
    <string name="no_ratings_en">There are no reviews to display!</string>
    <string name="no_ratings_de">Es sind keine Rezensione vorhanden!</string>
    <string name="no_ratings_hr">Nema recenzija za prikaz!</string>
    <string name="incorrect_password_en">The password is incorrect.</string>
    <string name="incorrect_password_de">Das Passwort ist inkorrekt.</string>
    <string name="incorrect_password_hr">Lozinka je netočna.</string>
    <string name="send_rating_anonymously_en">Send review anonymously</string>
    <string name="send_rating_anonymously_de">Rezension anonym absenden</string>
    <string name="send_rating_anonymously_hr">Pošaljite recenziju anonimno</string>
    <string name="successfully_updated_rating_en">Your review has been successfully updated.</string>
    <string name="successfully_updated_rating_de">Ihre Rezension wurde erfolgreich aktualisiert.</string>
    <string name="successfully_updated_rating_hr">Vaša recenzija je uspješno ažurirana.</string>
    <string name="error_while_updating_rating_en">There was an error while updating your review.</string>
    <string name="error_while_updating_rating_de">Beim Aktualisieren Ihrer Rezension ist ein Fehler aufgetreten.</string>
    <string name="error_while_updating_rating_hr">Došlo je do pogreške prilikom ažuriranja vaše recenzije.</string>
    <string name="successfully_created_rating_en">Your review has been successfully saved.</string>
    <string name="successfully_created_rating_de">Ihre Rezension wurde erfolgreich gespeichert.</string>
    <string name="successfully_created_rating_hr">Vaša recenzija je uspješno spremljena.</string>
    <string name="ratings_en">Reviews</string>
    <string name="ratings_de">Rezensione</string>
    <string name="ratings_hr">Recenzije</string>
    <string name="your_rating_en">Your review</string>
    <string name="your_rating_de">Deine Rezension</string>
</resources>