<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ratingMain"
    android:background="@drawable/main_border_dark"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooseRatingTitle"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/choose_rating_page_en"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/showRatingsButton"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/show_ratings_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButtonRating"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/cancel_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitRatingButton"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/my_rating_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>