<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passwordMain"
    android:background="@drawable/main_border_dark"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterPasswordTitle"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/enter_password_en"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:cursorVisible="false"
        android:paddingHorizontal="8dp"
        android:background="@color/dark_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:layout_marginBottom="36dp"
        android:background="@color/dark_theme"
        android:text="@string/password_en"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/password" />


    <Button
        android:id="@+id/cancelButtonPassword"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/cancel_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/submit_password_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>