<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181820">

    <TextView
        android:id="@+id/ratingTitle"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:focusable="false"
        android:text="@string/your_rating_en"
        android:textAlignment="textStart"
        android:textColor="@color/text_color_dark_mode"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ratingButton"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/header_button"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/rating_en"
        android:paddingLeft="26dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/languageButton"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <ImageView
        android:id="@+id/ratingIcon"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:translationZ="20dp"
        app:srcCompat="@drawable/rating"
        app:layout_constraintBottom_toBottomOf="@+id/ratingButton"
        app:layout_constraintEnd_toEndOf="@+id/ratingButton"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="@+id/ratingButton"
        app:layout_constraintTop_toTopOf="@+id/ratingButton" />

    <Button
        android:id="@+id/languageButton"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/header_button"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/language_hr"
        android:paddingLeft="26dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/themeButton"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <ImageView
        android:id="@+id/languageIcon"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:translationZ="20dp"
        app:srcCompat="@drawable/croatian"
        app:layout_constraintBottom_toBottomOf="@+id/languageButton"
        app:layout_constraintEnd_toEndOf="@+id/languageButton"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="@+id/languageButton"
        app:layout_constraintTop_toTopOf="@+id/languageButton" />

    <Button
        android:id="@+id/themeButton"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/header_button"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/light_theme_hr"
        android:paddingLeft="26dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textClock"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/themeIcon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:translationZ="20dp"
        app:srcCompat="@drawable/moon"
        app:layout_constraintBottom_toBottomOf="@+id/themeButton"
        app:layout_constraintEnd_toEndOf="@+id/themeButton"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/themeButton"
        app:layout_constraintTop_toTopOf="@+id/themeButton" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="12:45:00 AM"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:background="@drawable/header_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ratingContent"
        android:layout_width="665dp"
        android:layout_height="203dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/rating_content_en"
        android:padding="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="264dp"
        android:layout_height="75dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/edittext_design_focused_dark"
        android:rating="5"
        android:padding="12dp"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingContent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/cancel_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ratingSubmitButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_design"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/send_rating_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/chooseRatingLayout"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:visibility="invisible"
        android:translationZ="20dp"
        android:background="@color/dark_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ratingMain"
            android:background="@drawable/main_border_dark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chooseRatingTitle"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:text="@string/choose_rating_page_en"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.31" />

            <Button
                android:id="@+id/showRatingsButton"
                android:layout_width="112dp"
                android:layout_height="50dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_design"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/show_ratings_en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancelButtonRating"
                android:layout_width="112dp"
                android:layout_height="50dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_design"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/cancel_en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/submitRatingButton"
                android:layout_width="112dp"
                android:layout_height="50dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_design"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/my_rating_en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>